TASK: Implement eslint in GH actions

--- a/ui-plugin/package.json
+++ b/ui-plugin/package.json
@@ -4,15 +4,19 @@
   "version": "1.0.0",
   "scripts": {
     "build": "node esbuild.js",
-    "watch": "node esbuild.js --watch"
+    "watch": "node esbuild.js --watch",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "devDependencies": {
-    "@neos-project/neos-ui-extensibility": "~8.3.14",
-    "esbuild": "~0.25.8",
-    "eslint": "^9.33.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.35.0",
+    "@neos-project/neos-ui-extensibility": "~8.3.15",
+    "esbuild": "~0.25.10",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
     "prettier": "^3.6.2"
   },
   "neos": {
