--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: [ 'main' ]
 
+defaults:
+  run:
+    working-directory: ./ui-plugin
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,8 +19,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: './ui-plugin/.nvmrc'
           cache: 'yarn'
+          cache-dependency-path: './ui-plugin/yarn.lock'
 
       - name: Install dependencies
         run: yarn
