--- a/ui-plugin/package.json
+++ b/ui-plugin/package.json
@@ -17,7 +17,9 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.4.0",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.0"
   },
   "neos": {
     "buildTargetDirectory": "../Resources/Public/JavaScript"
