--- a/ui-plugin/package.json
+++ b/ui-plugin/package.json
@@ -5,30 +5,27 @@
   "scripts": {
     "build": "node esbuild.js",
     "watch": "node esbuild.js --watch",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
+    "lint": "oxlint src/**/*.{js,jsx,ts,tsx}"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.35.0",
     "@neos-project/neos-ui-extensibility": "~8.3.15",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@types/react-redux": "^7.1.34",
     "esbuild": "~0.25.10",
-    "eslint": "^9.35.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-react": "^7.37.5",
     "globals": "^16.4.0",
+    "oxlint": "^1.19.0",
     "prettier": "^3.6.2",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.0"
+    "typescript": "^5.9.2"
   },
   "neos": {
     "buildTargetDirectory": "../Resources/Public/JavaScript"
   },
-  "packageManager": "yarn@4.9.2",
   "prettier": {
     "printWidth": 120,
     "semi": true,
     "singleQuote": true,
     "tabWidth": 4
-  }
+  },
+  "packageManager": "yarn@4.10.3"
 }
