--- a/ui-plugin/tsconfig.json
+++ b/ui-plugin/tsconfig.json
@@ -3,7 +3,8 @@
     "lib": [
       "es5",
       "es6",
-      "dom"
+      "dom",
+      "ES2020"
     ],
     "skipLibCheck": true,
     "target": "ES2019",
@@ -18,7 +19,10 @@
         "name": "typescript-plugin-css-modules"
       }
     ],
-    "typeRoots": ["./src/typings"]
+    "typeRoots": [
+      "./src/typings",
+      "./node_modules/@types"
+    ]
   },
   "exclude": [
     "node_modules",
