--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "neos-plugin",
     "license": "MIT",
     "require": {
-        "neos/neos": "^8.3",
-        "neos/neos-ui": "^8.3.15"
+        "neos/neos": "^8.3 || ^9.0",
+        "neos/neos-ui": "^8.3.15 || ^9.0"
     },
     "autoload": {
         "psr-4": {
